# hr-policy-assistant

./: README.md  workflow.md
policy-assistant/backend/: .env.example  pyproject.toml
policy-assistant/backend/app/: main.py
policy-assistant/backend/app/agents/: answer_generation.py  citation.py  guardrail.py  query_analysis.py  tools.py
policy-assistant/backend/app/api/routes/: __init__.py  chat.py  documents.py  health.py
policy-assistant/backend/app/core/: app_logging.py  config.py
policy-assistant/backend/app/graphs/: state.py  workflow.py
policy-assistant/backend/app/models/: schemas.py
policy-assistant/backend/app/repositories/: document_repository.py
policy-assistant/backend/app/services/: chat_service.py  document_service.py  embedding_service.py  pdf_processing_service.py  retrieval_service.py
policy-assistant/backend/app/utils/: debug.py  file_validation.py
policy-assistant/backend/app/vectorstore/: supabase_pgvector.py
policy-assistant/frontend/: package-lock.json  package.json
policy-assistant/frontend/policy-ui/: index.html  package-lock.json  package.json
policy-assistant/frontend/policy-ui/src/: App.tsx
