[project]
name = "policy-assistant-backend"
version = "0.1.0"
description = "Internal company policy assistant POC using FastAPI, LangGraph, OpenAI, and Supabase pgvector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "numpy>=2.4.6",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "structlog>=25.5.0",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

